--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     ]
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.577.0",
+    "@aws-sdk/client-dynamodb": "3.577.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/class-transformer": "^0.4.0",
     "@nestjs/class-validator": "^0.13.4",
